--- a/src/components/closeFriend/closeFriend.css
+++ b/src/components/closeFriend/closeFriend.css
@@ -1,13 +1,25 @@
 .sidebarFriend {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-  }
-  
-  .sidebarFriendImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
-  }
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.sidebarPillWrapper {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.sidebarFriendImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+  border: 1px solid #e5e5e5;
+}
+
+.sidebarFriendName {
+  color: black;
+}
