--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .topbarContainer {
-  height: 50px;
+  padding: 0.5rem 0;
   width: 100%;
-  background-color: #1877f2;
+  background-color: #b13606;
   display: flex;
   align-items: center;
   position: sticky;
@@ -93,4 +93,18 @@
   border-radius: 50%;
   object-fit: cover;
   cursor: pointer;
+}
+
+.profileLink {
+  text-decoration: none;
+}
+
+.profileSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profileTag {
+  color: white;
 }
